welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:1: error: not found: value growFlowers
growFlowers(c: Color ) {
^FlowerPot:17: error: not found: value growFlowers
growFlowers()
^